Deleted duplicate <main>

--- a/index.html
+++ b/index.html
@@ -117,125 +117,130 @@
             </div>
         </section>
         <!--Svitlana Stasiuk block end-->
-    </main>
 
-    <!--Ruslan block start-->
-    <div class="catalog">
-        <div class="catalog__header">
-            <h1 id="catalog" class="catalog__header_title">CATALOG</h1>
-            <p class="catalog__header_annotation"><span>-</span>Designer Clothes for Every Taste.</p>
-            <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.</p>
+        <!--Ruslan block start-->
+        <div class="catalog">
+            <div class="catalog__header">
+                <h1 id="catalog" class="catalog__header_title">CATALOG</h1>
+                <p class="catalog__header_annotation"><span>-</span>Designer Clothes for Every Taste.</p>
+                <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.
+                </p>
+            </div>
+            <ul class="catalog__body">
+                <li class="catalog__doby_dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
+                        alt="girl in a shirt" width="500">
+                    <p>Dresses</p>
+                    <p>Casual and evening dresses in mini and midi lengths for your mazing looks</p>
+                </li>
+                <li class="catalog__doby_pants" style="display: inline-block;"><img src="img/catalog_block/girl3.webp"
+                        alt="girl in a shirt" width="500">
+                    <p>Pants</p>
+                    <p>Pants made from natural fabrics and our own collection of jeans that will last you for years</p>
+                </li>
+                <li class="catalog__doby_accessories" style="display:inline-block;"><img
+                        src="img/catalog_block/girl4.webp" alt="girl in a shirt" width="500">
+                    <p>Accessories</p>
+                    <p>Belts, rings, gloves necklaces and more for the finishing touch to your look</p>
+                </li>
+            </ul>
         </div>
-        <ul class="catalog__body">
-            <li class="catalog__doby_dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
-                    alt="girl in a shirt" width="500">
-                <p>Dresses</p>
-                <p>Casual and evening dresses in mini and midi lengths for your mazing looks</p>
-            </li>
-            <li class="catalog__doby_pants" style="display: inline-block;"><img src="img/catalog_block/girl3.webp"
-                    alt="girl in a shirt" width="500">
-                <p>Pants</p>
-                <p>Pants made from natural fabrics and our own collection of jeans that will last you for years</p>
-            </li>
-            <li class="catalog__doby_accessories" style="display:inline-block;"><img src="img/catalog_block/girl4.webp"
-                    alt="girl in a shirt" width="500">
-                <p>Accessories</p>
-                <p>Belts, rings, gloves necklaces and more for the finishing touch to your look</p>
-            </li>
-        </ul>
-    </div>
-    <!--Ruslan block end-->
+        <!--Ruslan block end-->
 
-    <!--block start Tanya-->
+        <!--block start Tanya-->
 
-    <section class="main-block">
-        <span class="main-block__title">Accessories</span>
-        <div class="main-block__spacer-line"></div>
-        <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
-        <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
-        <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful and
-            sophisticated accessories that
-            highlight your natural beauty.</p>
-        <div class="main-block__bags">
-            <i class="fas fa-shopping-bag"></i>
-            <p class="main-block__bags">Leather bags</p>
-            <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in our
-                online
-                and offline stores.</p>
-        </div>
-        <div class="main-block__hats">
-            <i class="fab fa-redhat"></i>
-            <p class="main-block__things">Hats and Caps</p>
-            <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current
-                occasion
+        <section class="main-block">
+            <span class="main-block__title">Accessories</span>
+            <div class="main-block__spacer-line"></div>
+            <h2 class="main-block__text-title">Treat Yourself to New Accessories.</h2>
+            <p class="main-block__about">We create accessories that perfectly match the outfits.</p>
+            <p class="main-block__text-about">Your look will not be complete without accessories. We create beautiful
                 and
-                your style.</p>
-        </div>
-        <div class="main-block__gloves">
-            <i class="fas fa-mitten"></i>
-            <p class="main-block__stuff">Gloves and Scarves</p>
-            <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these
-                accessories, as
-                well as for silk and woven
-                scarves in our store!</p>
-        </div>
-        <div class="main-block__icon">
-            <img src="img/girl-rose.jpeg" alt="girl with rose">
-        </div>
-    </section>
+                sophisticated accessories that
+                highlight your natural beauty.</p>
+            <div class="main-block__bags">
+                <i class="fas fa-shopping-bag"></i>
+                <p class="main-block__bags">Leather bags</p>
+                <p class="main-block__bags-item">Totes, crossbodies, satchels, and other bags can't wait to see you in
+                    our
+                    online
+                    and offline stores.</p>
+            </div>
+            <div class="main-block__hats">
+                <i class="fab fa-redhat"></i>
+                <p class="main-block__things">Hats and Caps</p>
+                <p class="main-block__things-item">Straw hat or sports cap? Choose what suits you best for the current
+                    occasion
+                    and
+                    your style.</p>
+            </div>
+            <div class="main-block__gloves">
+                <i class="fas fa-mitten"></i>
+                <p class="main-block__stuff">Gloves and Scarves</p>
+                <p class="main-block__stuff-item">Thin lace gloves became trendy again last year! Look for these
+                    accessories, as
+                    well as for silk and woven
+                    scarves in our store!</p>
+            </div>
+            <div class="main-block__icon">
+                <img src="img/girl-rose.jpeg" alt="girl with rose">
+            </div>
+        </section>
 
-    <!--block end Tanya-->
+        <!--block end Tanya-->
 
-    <!-- Sofiia block start-->
-    <div class="history">
-        <div class="history__header">
-            <p class="history__header-top-row">HISTORY</p>
-            <p class="history_header-title"><span>-</span>Moments That Matters for Us.</p>
-            <p class="history_header-text">A few words about how our brand of designer clothes was created and
-                developed.</p>
-        </div>
-        <div class="Beginning">
-            <div class="beginning__img">
-                <img src="img/history-block/1997.svg" alt="1997" width="200">
+        <!-- Sofiia block start-->
+        <div class="history">
+            <div class="history__header">
+                <p class="history__header-top-row">HISTORY</p>
+                <p class="history_header-title"><span>-</span>Moments That Matters for Us.</p>
+                <p class="history_header-text">A few words about how our brand of designer clothes was created and
+                    developed.</p>
             </div>
-            <div class="beginning__text">
-                <p class="beginning__text-title">
-                    Beginning
-                </p>
-                <span class="beginning__text-hr">-</span>
-                <p class="beginnind__text-paragraph">Johanna met Linda, and together they decided to create a fashion
-                    brand.</p>
+            <div class="Beginning">
+                <div class="beginning__img">
+                    <img src="img/history-block/1997.svg" alt="1997" width="200">
+                </div>
+                <div class="beginning__text">
+                    <p class="beginning__text-title">
+                        Beginning
+                    </p>
+                    <span class="beginning__text-hr">-</span>
+                    <p class="beginnind__text-paragraph">Johanna met Linda, and together they decided to create a
+                        fashion
+                        brand.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="featured">
-            <div class="featured__img">
-                <img src="img/history-block/2001.svg" alt="2001" width="200">
+            <div class="featured">
+                <div class="featured__img">
+                    <img src="img/history-block/2001.svg" alt="2001" width="200">
+                </div>
+                <div class="featured__text">
+                    <p class="featured__text-title">
+                        Featured in Vogue
+                    </p>
+                    <span class="featured__text-hr">-</span>
+                    <p class="featured__text-paragraph">We were featured as the "Editor's Pick for Spring-Summer 2001".
+                    </p>
+                </div>
             </div>
-            <div class="featured__text">
-                <p class="featured__text-title">
-                    Featured in Vogue
-                </p>
-                <span class="featured__text-hr">-</span>
-                <p class="featured__text-paragraph">We were featured as the "Editor's Pick for Spring-Summer 2001".</p>
-            </div>
-        </div>
 
-        <div class="first-offline-store">
-            <div class="first-offline-store__img">
-                <img src="img/history-block/2019.svg" alt="2019" width="200">
-            </div>
-            <div class="first-offline-store__text">
-                <p class="first-offline-store__text-title">
-                    First Offline Store
-                </p>
-                <span class="first-offline-store__text-hr">-</span>
-                <p class="first-offline-store__text-paragraph">In 2019, we opened our first boutique on the 5th Ave in
-                    New York.</p>
+            <div class="first-offline-store">
+                <div class="first-offline-store__img">
+                    <img src="img/history-block/2019.svg" alt="2019" width="200">
+                </div>
+                <div class="first-offline-store__text">
+                    <p class="first-offline-store__text-title">
+                        First Offline Store
+                    </p>
+                    <span class="first-offline-store__text-hr">-</span>
+                    <p class="first-offline-store__text-paragraph">In 2019, we opened our first boutique on the 5th Ave
+                        in
+                        New York.</p>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- Sofiia block end-->
+        <!-- Sofiia block end-->
 
     </main>
     <footer>
