Added link to catalog

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <nav class="header__nav">
                     <a href="#about_us">About Us</a>
-                    <a href="#">Catalog</a>
+                    <a href="#catalog">Catalog</a>
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
                 </nav>
