--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
 
         <!--Svitlana Stasiuk block start-->
         <section class="about-us">
+            <div style="background-image: url(img/about-us.png class="about-us-block"></div>
             <div class="about-us__text">
                 <h2 id="why choose us" class="about-us__text__name">WHY CHOOSE US</h2>
                 <p class="about-us__text__slogan">
-                    <span class="about-us__text__slogan__dash" style="color: #000;">—</span>
-                    <span class="about-us__text__slogan__text" style="color: #000" ;>Things You'll Love About Jolly
+                    <span class="about-us__text__slogan__dash" >—</span>
+                    <span class="about-us__text__slogan__text";>Things You'll Love About Jolly
                         House.</span>
                 </p>
                 <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
