Corrected class names to BEM in Ruslan's block

--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@
         <!--Ruslan block start-->
         <div class="catalog">
             <div class="catalog__header">
-                <h1 id="catalog" class="catalog__header_title">CATALOG</h1>
-                <p class="catalog__header_annotation"><span>-</span>Designer Clothes for Every Taste.</p>
+                <h1 id="catalog" class="catalog__header__title">CATALOG</h1>
+                <p class="catalog__header__annotation"><span>-</span>Designer Clothes for Every Taste.</p>
                 <p>We create fashion clothes that are ready to wear. We love simple looks and share our vision with you.
                 </p>
             </div>
             <ul class="catalog__body">
-                <li class="catalog__doby_dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
+                <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
                         alt="girl in a shirt" width="500">
                     <p>Dresses</p>
                     <p>Casual and evening dresses in mini and midi lengths for your mazing looks</p>
                 </li>
-                <li class="catalog__doby_pants" style="display: inline-block;"><img src="img/catalog_block/girl3.webp"
+                <li class="catalog__doby__pants" style="display: inline-block;"><img src="img/catalog_block/girl3.webp"
                         alt="girl in a shirt" width="500">
                     <p>Pants</p>
                     <p>Pants made from natural fabrics and our own collection of jeans that will last you for years</p>
                 </li>
-                <li class="catalog__doby_accessories" style="display:inline-block;"><img
+                <li class="catalog__doby__accessories" style="display:inline-block;"><img
                         src="img/catalog_block/girl4.webp" alt="girl in a shirt" width="500">
                     <p>Accessories</p>
                     <p>Belts, rings, gloves necklaces and more for the finishing touch to your look</p>
