Change img Svitlana bloc

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 
         <!--Svitlana Stasiuk block start-->
         <section class="about-us">
-            <div style="background-image: url(img/about-us.png class="about-us-block"></div>
-            <div class="about-us__text">
-                <h2 id="why choose us" class="about-us__text__name">WHY CHOOSE US</h2>
+            <div class="about-us__text>
+                <h2 id="why choose us class="about-us__text__name">WHY CHOOSE US</h2>
                 <p class="about-us__text__slogan">
                     <span class="about-us__text__slogan__dash" >—</span>
                     <span class="about-us__text__slogan__text";>Things You'll Love About Jolly
@@ -115,10 +114,13 @@
                     Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
                     well to create stunning new looks! </p>
                 <a href="#" class="about-us__lean-more-link">Learn More +</a>
+                <div class=" about-us-bloc">
+                    <img src="img/about-us.png" alt="background">
+                </div>
             </div>
         </section>
         <!--Svitlana Stasiuk block end-->
-    </main>
+    
 
     <!--Ruslan block start-->
     <div class="catalog">
