Changed id<h2> and<div class=about-us_text_slogan Svitlana block

--- a/index.html
+++ b/index.html
@@ -96,20 +96,21 @@
         <!--Svitlana Stasiuk block start-->
         <section class="about-us">
             <div class="about-us__text">
-                <h2 id="why choose us" class="about-us__text__name">WHY CHOOSE US</h2>
+                <h2 id="why_choose_us" class="about-us__text__name">WHY CHOOSE US</h2>
                 <p class="about-us__text__slogan">
-                    <span class="about-us__text__slogan__dash" style="color: #000;">—</span>
-                    <span class="about-us__text__slogan__text" style="color: #000" ;>Things You'll Love About Jolly
-                        House.</span>
+                    <span class="about-us__text__slogan__dash">—</span>
+                    <span class="about-us__text__slogan__text">Things You'll Love About Jolly House.</span>
                 </p>
                 <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
-                <ul class="about-us__text__slogan"> <span class="about-us__text__slogan__dash">—</span>
-                    <span class="about-us__text__slogan__text">Jolly brand is:</span>
+            <div class="about-us__text__slogan">    
+                <span class="about-us__text__slogan__dash">—</span>
+                <span class="about-us__text__slogan__text">Jolly brand is:</span>
+                <ul>
                     <li class="about-us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
                     <li class="about-us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
-                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.
-                    </li>
+                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.</li>
                 </ul>
+            </div>
                 <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
                     well to create stunning new looks! </p>
