Added img about-us

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img width="200" src="img/logo.svg" alt="Fashion House Logo">
                 </div>
                 <nav class="header__nav">
-                    <a href="#about_us">About Us</a>
+                    <a href="#why_choose_us">About Us</a>
                     <a href="#catalog">Catalog</a>
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
@@ -66,7 +66,7 @@
                 </p>
             </div>
             <div class="block-3__section-name">
-                <h2 class="secion__section-name-about" id="about_us">ABOUT US</h2>
+                <h2 class="secion__section-name-about" id="why_choose_us">ABOUT US</h2>
             </div>
             <div class="block-3__article-name">
                 <h3 class="block-3__article-name-name"><span class="block-3__article-name-name-dash"> — </span>Comfort
