Bug fixing didn't save and I repeat fixing

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             <div class="header__info">
                 <h1 class="header__introduction">DESIGNER CLOTHES</h1>
                 <p class="header__slogan">
-                    <font color="#c2a18a">—</font> Your New Everyday Style.
+                    <span style="color: #c2a18a;">—</span> Your New Everyday Style.
                 </p>
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
                     any occasion.</p>
-                <a href="#" class="header__shop-now-link"><button class="header__shop-now-button">
-                        <p class="header__shop-now-text">Shop Now +</p>
-                    </button></a>
-                <a href="#" class="header__about-us-link"><button class="header__about-us-button">
-                        <p class="header__about-us-text">About Us</p>
-                    </button></a>
+                    <button class="header__shop-now-button"><a href="#" class="header__shop-now-link">
+                        Shop Now +
+                    </a></button>
+                    <button class="header__about-us-button"><a href="#" class="header__about-us-link">
+                        About Us
+                    </a></button>
             </div>
         </div>
         <!--Roman Hrytsyshyn end-->
