Added girl1.jpg to catalog block

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                 </p>
             </div>
             <ul class="catalog__body">
+                <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl1.jpg"
+                    alt="girl in a shirt" width="500">
+                <p>Shirt & Tops</p>
+                <p>Light tops and shirts made from natural materials such as linen, silk and others.</p>
+            </li>
                 <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
                         alt="girl in a shirt" width="500">
                     <p>Dresses</p>
