Changed the uppercase letter to lowercase

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <p class="history_header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
             </div>
-            <div class="Beginning">
+            <div class="beginning">
                 <div class="beginning__img">
                     <img src="img/history-block/1997.svg" alt="1997" width="200">
                 </div>
