--- a/index.html
+++ b/index.html
@@ -94,27 +94,27 @@
         <!--Roman Fedoriv end block 3-->
 
         <!--Svitlana Stasiuk block start-->
-        <section class="about-us">
-            <div class="about-us__text">
-                <h2 id="why_choose_us" class="about-us__text__name">WHY CHOOSE US</h2>
-                <p class="about-us__text__slogan">
-                    <span class="about-us__text__slogan__dash">—</span>
-                    <span class="about-us__text__slogan__text">Things You'll Love About Jolly House.</span>
+        <section class="why_choose_us">
+            <div class="why_choose_us__text">
+                <h2 id="why_choose_us" class="why_choose_us__text__name">WHY CHOOSE US</h2>
+                <p class="why_choose_us__text__slogan">
+                    <span class="why_choose_us__text__slogan__dash">—</span>
+                    <span class="why_choose_us__text__slogan__text">Things You'll Love About Jolly House.</span>
                 </p>
-                <p class="about-us__text__slogan">We create each outfit for you with great love and care.</p>
-            <div class="about-us__text__slogan">    
-                <span class="about-us__text__slogan__dash">—</span>
-                <span class="about-us__text__slogan__text">Jolly brand is:</span>
+                <p class="why_choose_us__text__slogan">We create each outfit for you with great love and care.</p>
+            <div class="why_choose_us__text__slogan">    
+                <span class="why_choose_us__text__slogan__dash">—</span>
+                <span class="why_choose_us__text__slogan__text">Jolly brand is:</span>
                 <ul>
-                    <li class="about-us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
-                    <li class="about-us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
-                    <li class="about-us__text__list__text__el3">A great variety of outfits for every taste and size.</li>
+                    <li class="why_choose_us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
+                    <li class="why_choose_us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
+                    <li class="why_choose_us__text__list__text__el3">A great variety of outfits for every taste and size.</li>
                 </ul>
             </div>
                 <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
                     well to create stunning new looks! </p>
-                <a href="#" class="about-us__lean-more-link">Learn More +</a>
+                <a href="#" class="why_choose_us__lean-more-link">Learn More +</a>
             </div>
         </section>
         <!--Svitlana Stasiuk block end-->
