Added why_choose_us link and remove button for header__about-us-link-button

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
                     any occasion.</p>
-                    <button class="header__shop-now-button"><a href="#" class="header__shop-now-link">
+                    <a href="#" class="header__shop-now-link-button">
                         Shop Now +
-                    </a></button>
-                    <button class="header__about-us-button"><a href="#" class="header__about-us-link">
+                    </a>
+                    <a href="#why_choose_us" class="header__about-us-link-button">
                         About Us
-                    </a></button>
+                    </a>
             </div>
         </div>
         <!--Roman Hrytsyshyn end-->
