Renemed all classs in about-us section and created css folder and two files inside it:index.css and about-us.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img width="200" src="img/logo.svg" alt="Fashion House Logo">
                 </div>
                 <nav class="header__nav">
-                    <a href="#about_us">About Us</a>
+                    <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
                     <a href="#">Collection</a>
                     <a href="#">Contact us</a>
@@ -36,59 +36,63 @@
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
                     any occasion.</p>
-                    <a href="#" class="header__shop-now-link-button">
-                        Shop Now +
-                    </a>
-                    <a href="#why_choose_us" class="header__about-us-link-button">
-                        About Us
-                    </a>
+                <a href="#" class="header__shop-now-link-button">
+                    Shop Now +
+                </a>
+                <a href="#why_choose_us" class="header__about-us-link-button">
+                    About Us
+                </a>
             </div>
         </div>
         <!--Roman Hrytsyshyn end-->
     </header>
     <main class="main">
         <!--Roman Fedoriv start block 3-->
-        <div class="block-3">
-            <div class="block-3__img-column-1">
-                <img src="img/block_3/women-column-1.png" alt="women-column-1" class="block-3__img-column-1-img">
+        <section class="main__about-us">
+            <div class="main__about-us__left">
+                <div class="main__about-us__left__img-box">
+                    <img src="img/block_3/women-column-1.png" alt="women-column-1"
+                        class="main__about-us__left__img-box__img">
+                </div>
+                <div class="main__about-us__left__quotation-marks">
+                    <img src="img/block_3/quotation-mark.png" alt="quatation-marks"
+                        class="main__about-us__left__quatation-marks__img">
+                </div>
+                <div class="main__about-us__text-box">
+                    <p class="main__about-us__text-box__text">"I have always had difficulties with buying clothes
+                        for every-day wear. Therefore, together with Linda, we decided to create our own brand.
+                    </p>
+                </div>
+                <div class="main__about-us__footer">
+                    <p class="main__about-us__footer__text"> <span class="main__about-us__footer__text__dash">—</span>
+                        Johanna Innsbruck</p>
+                </div>
             </div>
-            <div class="block-3__quotation-marks">
-                <img src="img/block_3/quotation-mark.png" alt="quatation-marks" class="block-3__quatation-marks-img">
-            </div>
-            <div class="block-3__johannas-phrase">
-                <p class="block-3__johannas-phrase-text">"I have always had difficulties with buying clothes for
-                    every-day
-                    wear. Therefore, together with Linda, we decided to create our own brand. </p>
-            </div>
-            <div class="section3__johanna">
-                <p class="block-3__johanna-author"> <span class="block-3__johanna-author-dash">—</span> Johanna
-                    Innsbruck
-                </p>
-            </div>
-            <div class="block-3__section-name">
-                <h2 class="secion__section-name-about" id="about_us">ABOUT US</h2>
-            </div>
-            <div class="block-3__article-name">
-                <h3 class="block-3__article-name-name"><span class="block-3__article-name-name-dash"> — </span>Comfort
-                    and
-                    Quality Come First.</h3>
-            </div>
-            <div class="block-3__article">
-                <p class="block-3__article-text"><span class="section3__article-text-text-1">Johanna Innsbruck and Linda
-                        Copperfield have always dreamed of comfortable women's clothing that would look appropriate in
-                        any
-                        circumstances.</span><br>
-                    <br>
-                    <span class="block-3__article-text-text-2">This is how the Jolly House brand appeared – it is a
-                        brand for women who like to feel confident, seductive, and stylish in any situation. We use only
-                        natural
+            <div class="main__about-us__right">
+                <div class="main__about-us__right__name-box">
+                    <h2 class="main__about-us__right__name-box__name" id="about-us">ABOUT US</h2>
+                </div>
+                <div class="main__about-us__right__article-name-box">
+                    <h3 class="main__about-us__right__article-name-box__name"><span class="main__about-us__right__article-name-box__name__dash"> —</span>
+                        Comfort and Quality Come First.
+                    </h3>
+                </div>
+                <div class="main__about-us__right__article-box">
+                    <p class="main__about-us__right__article-box__text"><span class="main__about-us__right__article-box__text__text-1">
+                        Johanna Innsbruck and Linda Copperfield have always dreamed of comfortable women's clothing that would look appropriate
+                        in any circumstances.</span><br>
+                        <br>
+                        <span class="main__about-us__right__article-box__text__text-2">This is how the Jolly House brand appeared – it is
+                        a brand for women who like to feel confident, seductive, and stylish in any situation. We use only natural
                         fabrics and pay great attention to details that make the difference.
-                    </span>
-                </p>
+                        </span>
+                    </p>
+                </div>
+                <div class="main__about-us__right__img-box">
+                    <img src=" img/block_3/women-column-2.png" alt="women-column-2"class="main__about-us__right__img-box__img">
+                </div>
             </div>
-            <div class="block-3__img-column-2">
-                <img src=" img/block_3/women-column-2.png" alt="women-column-2" class="block-3__img-column-2-img">
-            </div>
+        </section>
 
         </div>
         <!--Roman Fedoriv end block 3-->
@@ -102,15 +106,18 @@
                     <span class="why_choose_us__text__slogan__text">Things You'll Love About Jolly House.</span>
                 </p>
                 <p class="why_choose_us__text__slogan">We create each outfit for you with great love and care.</p>
-            <div class="why_choose_us__text__slogan">    
-                <span class="why_choose_us__text__slogan__dash">—</span>
-                <span class="why_choose_us__text__slogan__text">Jolly brand is:</span>
-                <ul>
-                    <li class="why_choose_us__text__list__text__el1">Capsule collections you can wear on any occasion;</li>
-                    <li class="why_choose_us__text__list__text__el2">Only high quality and eco-friendly materials;</li>
-                    <li class="why_choose_us__text__list__text__el3">A great variety of outfits for every taste and size.</li>
-                </ul>
-            </div>
+                <div class="why_choose_us__text__slogan">
+                    <span class="why_choose_us__text__slogan__dash">—</span>
+                    <span class="why_choose_us__text__slogan__text">Jolly brand is:</span>
+                    <ul>
+                        <li class="why_choose_us__text__list__text__el1">Capsule collections you can wear on any
+                            occasion;</li>
+                        <li class="why_choose_us__text__list__text__el2">Only high quality and eco-friendly materials;
+                        </li>
+                        <li class="why_choose_us__text__list__text__el3">A great variety of outfits for every taste and
+                            size.</li>
+                    </ul>
+                </div>
                 <p>We know the main problem of all women – a lot of clothes in the wardrobe but nothing to wear.
                     Therefore, we develop capsule collections where clothes go well with each other. You can mix them as
                     well to create stunning new looks! </p>
@@ -129,10 +136,10 @@
             </div>
             <ul class="catalog__body">
                 <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl1.jpg"
-                    alt="girl in a shirt" width="500">
-                <p>Shirt & Tops</p>
-                <p>Light tops and shirts made from natural materials such as linen, silk and others.</p>
-            </li>
+                        alt="girl in a shirt" width="500">
+                    <p>Shirt & Tops</p>
+                    <p>Light tops and shirts made from natural materials such as linen, silk and others.</p>
+                </li>
                 <li class="catalog__doby__dresses" style="display:inline-block;"><img src="img/catalog_block/girl2.webp"
                         alt="girl in a shirt" width="500">
                     <p>Dresses</p>
