--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Jolly Fashion House</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
