Add css (color, font, size) to header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Jolly Fashion House</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             <div class="header__info">
                 <h1 class="header__introduction">DESIGNER CLOTHES</h1>
                 <p class="header__slogan">
-                    <span style="color: #c2a18a;">—</span> Your New Everyday Style.
+                    <span style="color: #c2a18a;">—</span> Your New <br>Everyday Style.
                 </p>
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
