Renamed folder block-3 to about-us and images inside it; changed urls to all images in about-us section

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <section class="main__about-us">
             <div class="main__about-us__left">
                 <div class="main__about-us__left__img-box">
-                    <img src="img/block_3/women-column-1.png" alt="women-column-1"
+                    <img src="img/about-us/women-1.png" alt="Women in dress"
                         class="main__about-us__left__img-box__img">
                 </div>
                 <div class="main__about-us__left__quotation-marks">
-                    <img src="img/block_3/quotation-mark.png" alt="quatation-marks"
+                    <img src="img/about-us/quotation-mark.png" alt="Quatation marks"
                         class="main__about-us__left__quatation-marks__img">
                 </div>
                 <div class="main__about-us__text-box">
@@ -90,7 +90,7 @@
                     </p>
                 </div>
                 <div class="main__about-us__right__img-box">
-                    <img src=" img/block_3/women-column-2.png" alt="women-column-2"class="main__about-us__right__img-box__img">
+                    <img src=" img/about-us/women-2.png" alt="Women in blouse and jacket"class="main__about-us__right__img-box__img">
                 </div>
             </div>
         </section>
