Added css to history block and h2

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
         <!-- Sofiia block start-->
         <div class="history">
             <div class="history__header">
-                <p class="history__header-top-row">HISTORY</p>
-                <p class="history_header-title"><span>-</span>Moments That Matters for Us.</p>
+                <h2 class="history__header-top-row">HISTORY</h2>
+                <h3 class="history_header-title"><span>-</span>Moments That Matters for Us.</h3>
                 <p class="history_header-text">A few words about how our brand of designer clothes was created and
                     developed.</p>
             </div>
@@ -215,9 +215,9 @@
                     <img src="img/history-block/1997.svg" alt="1997" width="200">
                 </div>
                 <div class="beginning__text">
-                    <p class="beginning__text-title">
+                    <h4 class="beginning__text-title">
                         Beginning
-                    </p>
+                    </h4>
                     <span class="beginning__text-hr">-</span>
                     <p class="beginnind__text-paragraph">Johanna met Linda, and together they decided to create a
                         fashion
@@ -230,9 +230,9 @@
                     <img src="img/history-block/2001.svg" alt="2001" width="200">
                 </div>
                 <div class="featured__text">
-                    <p class="featured__text-title">
+                    <h4 class="featured__text-title">
                         Featured in Vogue
-                    </p>
+                    </h4>
                     <span class="featured__text-hr">-</span>
                     <p class="featured__text-paragraph">We were featured as the "Editor's Pick for Spring-Summer 2001".
                     </p>
@@ -244,9 +244,9 @@
                     <img src="img/history-block/2019.svg" alt="2019" width="200">
                 </div>
                 <div class="first-offline-store__text">
-                    <p class="first-offline-store__text-title">
+                    <h4 class="first-offline-store__text-title">
                         First Offline Store
-                    </p>
+                    </h4>
                     <span class="first-offline-store__text-hr">-</span>
                     <p class="first-offline-store__text-paragraph">In 2019, we opened our first boutique on the 5th Ave
                         in
