Add two buttons for Shop Now and Abous Us links and background color for header__info div

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             <!-- Sofiia block end-->
             <!--Roman Hrytsyshyn start-->
             <div class="header__info">
-                <h1 class="header__introduction">DESIGNER CLOTHES</h1>
+                <h1 class="header__introduction"><strong>DESIGNER CLOTHES</strong></h1>
                 <p class="header__slogan">
                     <span class="header__slogan__dash">—</span> Your New <br>Everyday Style.
                 </p>
                 <p class="header__our-description">Jolly House is your destination for designer and comfortable clothes
                     for
                     any occasion.</p>
-                <a href="#" class="header__shop-now-link-button">
+                <a href="#" class="header__shop-now-link-button-white">
                     Shop Now +
                 </a>
-                <a href="#why_choose_us" class="header__about-us-link-button">
+                <a href="#why_choose_us" class="header__about-us-link-button-black">
                     About Us
                 </a>
             </div>
